<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/emptyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/there_apos_s_nothing_here"
        android:visibility="gone"
        android:textColor="@color/h_btn_text_color"
        android:textSize="@dimen/_14sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btmLay" />

    <LinearLayout
        android:id="@+id/sAccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wapp_permission"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:textColor="@color/h_btn_text_color"
            android:gravity="center"
            android:textSize="@dimen/_12sdp" />
        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/allow_storage_access"
            android:background="@drawable/home_btn"
            android:textColor="@color/h_btn_text_color"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btmLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_65sdp"
            android:background="@drawable/home_btn"
            android:gravity="center"
            android:layout_weight="0.48"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/home_btn_icon_bg" />
                <CheckBox
                    android:id="@+id/selectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:buttonTint="#fff"
                    android:src="@drawable/downbtn" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select All"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/h_btn_text_color"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"/>

        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="@dimen/_65sdp"
            android:layout_weight="0.48"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:background="@drawable/home_btn">

            <LinearLayout
                android:id="@+id/img"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/home_btn_icon_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pdelete" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center|left"
                android:layout_toRightOf="@id/img"
                android:layout_marginLeft="@dimen/_5sdp"
                android:lines="3"
                android:text="@string/delete_items_blank"
                android:textColor="@color/h_btn_text_color"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/loader_lay" />
    <include layout="@layout/empty_files"/>

</RelativeLayout>
